# VGE

./: .gitignore  CMakeLists.txt  README.md  README.txt  VGE.sln  VGE.vcxproj  VGE.vcxproj.filters
Include/: Collision.hpp  Constants.hpp  GJK.hpp  Logic.hpp  PolygonGen.hpp  QuadTree.hpp  SAT.hpp  VertexPool.cpp  VertexPool.hpp
Sources/: AlgDebugger.cpp  Collision.cpp  GJK.cpp  Logic.cpp  PerfBench.cpp  PolygonGen.cpp  QuadTree.cpp  SAT.cpp  Shapes.cpp  main.cpp
